--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,5 +1,10 @@
 
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add new server</button>
+<div class="mb-3">
+  <label for="server-name" class="form-label">Server name</label>
+  <input type="text" id="server-name" class="form-control" (input)="onUpdateServerName($event)">
+</div>
+<p>{{ serverName }}</p>
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
