--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,7 +2,8 @@
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add new server</button>
 <div class="mb-3">
   <label for="server-name" class="form-label">Server name</label>
-  <input type="text" id="server-name" class="form-control" (input)="onUpdateServerName($event)">
+  <!-- <input type="text" id="server-name" class="form-control" (input)="onUpdateServerName($event)"> #} -->
+  <input type="text" id="server-name" class="form-control" [(ngModel)]="serverName">
 </div>
 <p>{{ serverName }}</p>
 <p>{{ serverCreationStatus }}</p>
