add user profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,21 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in the AppComponent</h3>
-      <hr>
-      <app-servers></app-servers>
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <h3>I'm in the AppComponent</h3>
+        <hr>
+        <app-servers></app-servers>
+      </div>
+      <div class="col-6">
+        <h3>Profile</h3>
+        <hr>
+        <app-profile></app-profile>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
+
 
 
