--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -5,7 +5,7 @@
   <!-- <input type="text" id="server-name" class="form-control" (input)="onUpdateServerName($event)"> #} -->
   <input type="text" id="server-name" class="form-control" [(ngModel)]="serverName">
 </div>
-<p>{{ serverName }}</p>
+<!-- <p>{{ serverName }}</p> -->
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
