use ngStyle et ngClass

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,7 @@
 <h4>The component server</h4>
-<p>{{ 'Server' }} with ID {{ serverId }} is  {{ getServerStatus() }}</p>
+<p
+  [ngStyle]="{backgroundColor: getColor()}"
+  [ngClass]="{online : serverStatus === 'online'}"
+>
+{{ 'Server' }} with ID {{ serverId }} is  {{ getServerStatus() }}
+</p>
