--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,16 @@
     </div>
   </div>
 </section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h3>Logs</h3>
+        <app-detail></app-detail>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
